--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
-  "name": "cleaning-robot",
+  "name": "robot-cleaner-typescript",
   "version": "0.1.2",
-  "description": "A simple cleaning robot for Cint",
+  "description": "A simple robot cleaner in typescript",
   "author": "Carl-Johan Kihl",
   "license": "mit",
   "scripts": {
     "start": "ts-node src/index.ts",
     "watch": "nodemon src/index.ts --exec ts-node",
     "build": "tsc",
-    "test": "jest"
+    "test": "jest",
+    "format": "prettier --write \"src/**/*.ts\"",
+    "lint": "tslint -p tsconfig.json"
   },
   "prettier": {
     "printWidth": 120,
@@ -24,7 +26,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git@bitbucket.org:carkih/cleaning-robot.git"
+    "url": "git@github.com:caki0915/robot-cleaner-typescript.git"
   },
   "devDependencies": {
     "@types/jest": "^22.2.3",
